# learn-haskell

./: .gitignore  input.txt  learn-haskell.cabal
advent-of-code-2023/: advent-of-code2023.cabal
advent-of-code-2023/day1/: day1.hs  misc.md
advent-of-code-2023/day2/: day2.hs
advent-of-code-2023/day3/: day3.hs
advent-of-code-2023/src/: Main.hs
advent-of-code-2023/src/day2/: day2.hs
advent-of-code-2023/src/day3/: day3.hs
advent-of-code-2023/src/utils/: FileHandling.hs
advent-of-code-2023/utils/: io.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
exercism/: abbreviate.hs  anagrams.hs  darts.hs  ex6.hs  grains.hs  nuclleotide_count.hs  reverse_string.hs  rna_transcription.hs  sum_of_mutiples.hs
language_features/: Shapes.hs  car.hs  folds.hs  guards.hs  higher_order_functions_currying.hs  map_and_filter.hs  modules.hs  recursive_max.hs
project_euler/: 1.hs  2.hs
realworldhaskell/: ch2.hs  ch3.hs
realworldhaskell/ch4/: ch4.hs  ex.hs  interact_with.hs  split_lines.hs
realworldhaskell/ch5/: Main.hs  Prettify.hs  PrettyJSON.hs  PrettyStub.hs  PutJSON.hs  SimpleJSON.hs  SimpleJson.hs  mypretty.cabal
