cabal-version:      2.4
name:               advent-of-code2023
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Alex H. S. Lee
maintainer:         alex.lee@posteo.net

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library 
    exposed-modules: FileHandling
    autogen-modules: FileHandling

executable advent-of-code2023
    main-is:          Main.hs
    other-modules: FileHandling

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   src, src/utils
    default-language: Haskell2010
